--- a/ISoLA16/paper.bib
+++ b/ISoLA16/paper.bib
@@ -404,16 +404,16 @@ OPTnote = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-l
 } 
 
 @Misc{DO178B,
-  author =       {RTCA},
-  howpublished =       {RTCA, Inc.},
+  author =       {{RTCA}},
+  howpublished =       {{RTCA, Inc.}},
   title =        {Software Considerations in Airborne Systems and Equipment Certification},
  note = {{RCTA/DO-178C}},
   year =         {2011}
   }
 
 @Misc{DO254,
-  key =       {RTCA},
-  howpublished =       {RTCA, Inc.},
+  key =       {{RTCA}},
+  howpublished =       {{RTCA, Inc.}},
   title =        {Design Assurance Guidelines for Airborne Electronic Hardware},
  note = {{RCTA/DO254}},
   year =         {2000}
@@ -421,7 +421,7 @@ OPTnote = {Available at \url{http://www-verimag.imag.fr/index.php?page=techrep-l
 
 @Misc{DO333,
   key =       {RTCA},
-  howpublished =       {RTCA, Inc.},
+  howpublished =       {{RTCA, Inc.}},
   title =        {Formal Methods Supplement to DO-178C and DO-278A},
  note = {{RCTA/DO333}},
   year =         {2011}
@@ -743,7 +743,7 @@ publisher = {IEEE Computer Society},
 
 
 @PhdThesis{Kelly98arguingsafety,
-  author = 	 {Timothy Patrick Kelly}},
+  author = 	 {{Timothy Patrick Kelly}},
   title = 	 {Arguing Safety -- A Systematic Approach to Managing Safety Cases},
   school = 	 {University of York},
   year = 	 {1998}
