--- a/ISoLA16/trace.tex
+++ b/ISoLA16/trace.tex
@@ -1,18 +1,17 @@
 \section{Traceability}~\label{sec:trace}
-
-Safety is a systems property and most of the analysis ensuring a
-design is safe is conducted during requirements and design.  To ensure
-the safety analysis is carried through the design and development
-process many guidelines for safety-critical software, such as DO-178C,
-requires documentation of traceability from requirements to object
-code. To facilitate the
-acceptance of RV in these areas, RV frameworks should facilitate
-traceability from the monitor to the specification.
+ 
+To ensure that the requirements and  safety analyses performed  early
+in systems development reflected throughout the lifecycle, many guidelines for safety-critical software, such as DO-178C,
+require documentation of traceability from requirements to object
+code. Consequently, to  promote the acceptance of high-assurance RV
+the monitor generation  frameworks should produce documentation that
+supports 
+traceability from specification to monitor code.
 
  \paragraph{Challenge} Support  traceability from the reqirememts and system level analysis to the actual monitor code. 
 
-\paragraph{Copilot Approach} Using SBV to generate C monitors can create many small 
-files. The code generation module has recently been revised to
+\paragraph{Copilot Approach} Using SBV to generate C monitors may  create many small 
+files and it can quite difficult to relate this to the specification. The code generation module has recently been revised to
 generate documentation that increase  traceability. The
 user can  insert labels in their specifications flow down to the
 documentation. The translation process
@@ -25,7 +24,9 @@ In the case of the following example:
 hor_rr sx sy e v'x v'y = (label "?hor_rr_dividend" $ sqrt $ (normsq2dim sx sy) - (minHorSep * minHorSep)) / (label "?hor_rr_divisor" $ minHorSep)
 \end{lstlisting}  
 the SBV translation breaks this relatively simple expression into
-numerous small C functions.  The auto-generated documentation for one of these fieles
+numerous small C functions and function parameters get instantiated
+with the variables being monitored.  The auto-generated documentation for one
+of these files 
 appears similar to   Figure~\ref{fig:trace2}, where the variables. 
 
 
