--- a/ISoLA16/intro.tex
+++ b/ISoLA16/intro.tex
@@ -22,7 +22,7 @@ machine learning that enable autonomy lack the salient feature of
 being predictable since the system's behavior depends on what it has
 learned.  Consequently, the  problem  of assuring safety-critical IA is
 both a barrier to industrial use of  as well as a 
-systems is a considerable research challenge~\cite{NRC14} .
+systems is a considerable research challenge~\cite{NRC14}.
 
 
 \emph{Runtime verification} (RV)~\cite{monitors}, where monitors
@@ -47,18 +47,17 @@ recently applied to our program of high-assurance RV.
 
 
 \paragraph{Contributions:} During the course of our research on we
-have been guided by the general question of ``what will take to
-convince someone in authority to use high-assurance RV so safeguard a
-system that cannot be otherwise assured.''  While we are a long way
-from the point of convincing a regulatory authority, we believe we
-have identified a number of challenges impede actualizing
-high-assurance RV.  We discuss how we have approached these challenge
-in Copilot with the help of a running example. A general theme of our
-work is the application of lightweight formal methods to achieve
-high-assurance.  Safety is a systems property so the scope of the
-challenge is necessarily broad ranging from how one arrives at the
-specification to be monitored to necessary capabilities the RV
-framework must meet. We will highlight many opportunities for applying
-light-weight formal methods tools to high-assurance RV in hopes of
-fostering greater collaboration between the RV and tool communities.
+have been guided by the general question of ``what questions must be
+addressed  to make a
+convincing case that  high-assurance RV can safeguard a
+system that cannot be otherwise assured.''  In this paper, we
+chronicle a number of  challenges we have identified that must be
+thoroughly addressed in order to actualize high-assurance RV.  We hope
+that this helps inform other researchers that wish to apply RV to
+safety-critical systems. We examine  how  these issues have been
+addressed in our own work   with the help of a running example. A general theme of our
+application of lightweight formal methods to achieve
+high-assurance.   
+
+
 
