--- a/ISoLA16/observ.tex
+++ b/ISoLA16/observ.tex
@@ -1,33 +1,38 @@
 \section{Observability}\label{sec:observ} 
+Guaranteeing that all the data required by the specification is
+actually \emph{observable} is one of the principal engineering
+challenges of RV. In embedded systems the RV specification often
+involves data from a number of different types of data sources,
+including state data of executing programs, sensor data, as well as
+data that is communicated from other systems.  The systems safety
+properties of cyber-physical systems are often formulated by the
+aerospace and automobile engineers that are domain experts, but in
+practice they usually have little understanding of the computing
+systems so the RV engineer needs to be very proactive in addressing
+the observability issue. In embedded systems, the closed nature of the
+hardware platforms and the propriety issues can make it impossible to
+observe the information required in the specification.  Additional
+sensors may be needed or communication data formats changed.  At times
+it is necessary to change the specification so that it only depends on
+observable data.  The observability issue may seem like
+an``engineering detail'', but based on our experience it's often a
+significant often a significant obstacle causing delays, frustration,
+and sometimes preventing progress altogether.
 
- Ensuring observability of
-both the system state and the environment as required by a
-specification is one of the principal engineering challenges of RV.
-If monitoring the state of an executing program, is it possible that
-the monitor fails to detect a state change?  It is often necessary to
-read sensor data to obtain the required state data (e.g. aircraft
-pitch and vehicle position) or environmental data (e.g. temperature).
-If it is raw sensor data, do we apply filters before feeding the data
-into the monitors?  Is the data available in the same coordinate
-systems demanded of the specification?  Can we ensure the integrity
-and provenance of the data being observed?
 
 \paragraph{Challenge:} \emph{Are the state and environmental variables in the
-specification  observable.}  
+specification  observable?}  
 
 
- 
-  \paragraph{Copilot Approach:}
-  How an RV framework obtains state data impacts the properties that
-  can be monitored.  Many of RV frameworks such as MAC~\cite{KimLKS04}
+  \paragraph{Copilot Approach:} How an RV framework obtains state data impacts the properties that
+  can be monitored. Many of RV frameworks such as MAC~\cite{KimLKS04}
   and MOP~\cite{ChenR05} instrument the software and hardware of the
   SUO so that it emits events of interest to the monitor.  While
-  attractive from the veiwpoint of maximizing state observability, the
+  attractive from the viewpoint of maximizing state observability, the
   additional overhead may affect execution time affectiing worst case
-  execution times and consequently the scheduling; in addition
-  regulatory guidelines may require recertificaiton of that software.
-  Copilot, and several other RV
-  frameworks~\cite{sampling,Kane15,borzoo}, opt to sacrifice complete
+  execution times and consequently the scheduling; 
+  regulatory guidelines may  also require recertification of that software.
+  Copilot, and several other RV frameworks~\cite{sampling,Kane15,borzoo}, opt to sacrifice complete
   observability by sampling events.  Copilot monitors run as dedicated
   thread and sample program variables and state information via shared
   memory.  Currently, we rely on scheduling analysis with a good
@@ -38,6 +43,18 @@ specification  observable.}
   guarantees, but we cannot make strong guarantees running on less
   specialized systems.
 
+A critical lesson learned in the course of conducting may case studies
+is to ask questions about observability early and often. 
+If monitoring the state of an executing program, is it possible that
+the monitor fails to detect a state change?  It is often necessary to
+read sensor data to obtain the required state data (e.g. aircraft
+pitch and vehicle position) or environmental data (e.g. temperature).
+If it is raw sensor data, do we apply filters before feeding the data
+into the monitors?  Is the data available in the same coordinate
+systems demanded of the specification?  Can we ensure the integrity
+and provenance of the data being observed? 
+
+
   The aircraft safe separation criteria specification introduced in
   Section~\ref{sec:req} requires the monitor observe state data for
   both the aircraft the monitor is executing on as well as the
@@ -47,9 +64,7 @@ specification  observable.}
   aircraft position data had to be converted from World Geodetic
   System latitude and longitude to ECEF.
 
-  
 
-%\begin{itemize} 
 %\item Does the monitor possess access to the necessary sensor data to
  % monitor state of the SUO?
 %\item Do those sensors even exist?
