--- a/ISoLA16/trace.tex
+++ b/ISoLA16/trace.tex
@@ -1,25 +1,26 @@
 \section{Traceability}~\label{sec:trace}
  
-To ensure that the requirements and  safety analyses performed  early
-in systems development reflected throughout the lifecycle, many guidelines for safety-critical software, such as DO-178C,
-require documentation of traceability from requirements to object
-code. Consequently, to  promote the acceptance of high-assurance RV
-the monitor generation  frameworks should produce documentation that
-supports 
-traceability from specification to monitor code.
+To ensure that the requirements and safety analyses performed early in
+systems development is reflected throughout the lifecycle, many
+guidelines for safety-critical software, such as DO-178C, require
+documentation of traceability from requirements to object
+code. Consequently, to promote the acceptance of high-assurance RV the
+monitor generation frameworks should produce documentation that
+supports traceability from specification to monitor code.
 
- \paragraph{Challenge} Support  traceability from the reqirememts and system level analysis to the actual monitor code. 
+ \paragraph{Challenge:} Support  traceability from the reqirememts and system level analysis to the actual monitor code. 
 
-\paragraph{Copilot Approach} Using SBV to generate C monitors may  create many small 
-files and it can quite difficult to relate this to the specification. The code generation module has recently been revised to
-generate documentation that increase  traceability. The
-user can  insert labels in their specifications flow down to the
-documentation. The translation process
-creates C header files with documentation formatted to be processed by
-the plan text graph description language processor  DOT. As such each C 
-function has accompanying  auto-generated graphical documentation.
+ \paragraph{Copilot Approach:} Using SBV to generate C monitors may
+ create many small files and it can quite difficult to relate this to
+ the specification. The code generation module has recently been
+ revised to generate documentation that increase traceability. The
+ user can insert labels in their specifications flow down to the
+ documentation. The translation process creates C header files with
+ documentation formatted to be processed by the plan text graph
+ description language processor DOT. As such each C function has
+ accompanying auto-generated graphical documentation.
 
-In the case of the following example: 
+ In the case of the following example:
 \begin{lstlisting}[frame=single]
 hor_rr sx sy e v'x v'y = (label "?hor_rr_dividend" $ sqrt $ (normsq2dim sx sy) - (minHorSep * minHorSep)) / (label "?hor_rr_divisor" $ minHorSep)
 \end{lstlisting}  
