--- a/ISoLA16/steer.tex
+++ b/ISoLA16/steer.tex
@@ -1,8 +1,8 @@
 \section{Additional Challanges }\label{sec:future} 
 The presentation so far has examined challenges in assured RV that
 have been addressed in our own research. In this section, we will
-raise three of the key additional challenges that we believe need to
-be addressed in future work.
+raise three of the key additional challenges that we have identified
+as critical to address in future work.
 
 \paragraph{Safe Steering} The problem of what to do when a
 specification has been violated is one of the most thorny problems in
@@ -15,12 +15,11 @@ operation depending on the operating environment.  In the case of an
 adaptive control system, the RV framework may switch to a conventional
 controller, but whether this re-establishes safety depends on many
 factors.  Our experience in participating in UAS flight tests
-illustrate how difficult the steering problem can be as just direct
-the vehicle into the ground to insure the vehicle does not endanger
-those outside of a test range not simple due to the need to consider
+illustrate how difficult the steering problem can be as simply directing
+the vehicle into the ground so that it does not leave a test range not simple due to the need to consider
 aircraft dynamics.  In many domains, the challenge in constructing an
 assured safe steering algorithm may be as difficult as constructing
-the adaptive autonomous algorithm.
+the adaptive autonomous algorithm itself.
 
 \paragraph{Challenge:}  \emph{Verifying the correctness and safety of the
 steering performed once a specification violation is detected.}
@@ -29,14 +28,14 @@ steering performed once a specification violation is detected.}
 
 \paragraph{Predictive Monitors} Applying RV to application domains
 such as an adaptive control system that have strict timing constraints
-raises many technical challenges. The monitor needs to detect that the
+raises many technical challenges.  It is imperative that the  monitor  detect that the
 adaptive controller is about to loose stability in time to switch to a
 safe controller. In the case of our running example, the RV system
 needs to detect that two aircraft are about to lose separation in time
 for them to take corrective action.  Assured predictive monitors are
 needed, but much work remains to be done.  Johnson
 et. al.~\cite{johnson2015tecs} is a promising approach to predictive
-monitoring of controller, but very domain specific. Assured predictive
+monitoring for controllers, but the general problem is very domain specific. Assured predictive
 monitoring remains a research challenge for the RV community.
 
 \paragraph{Challenge:} \emph{The monitor should detect  violations of the specification and invoke the safety controller in time to preserve safe operation.}
